# phasty

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: codecov.yml  sphinx.yml
docs/: conf.py  index.rst  requirements.txt
phasty/: __init__.py  parser.py  wrapper.py
tests/: phyloFit.mod  test_parser.py  test_wrapper.py
