[metadata]
name = phasty
version = attr: phasty.__version__
url = https://github.com/yuanx749/phasty
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent
license = BSD 3-Clause License
description = A Python interface for PHAST (phylogenetic analysis with space/time models).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogenetic

[options]
packages = phasty
install_requires = numpy
python_requires = >=3.8

[options.extras_require]
dev =
    pre-commit
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    pytest
    pytest-cov
