[metadata]
name = phasty
version = attr: phasty.__version__
url = https://github.com/yuanx749/phasty
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license = BSD 3-Clause License
description = A Python interface for PHAST (phylogenetic analysis with space/time models).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogenetics

[options]
packages = phasty
install_requires = numpy
python_requires = >=3.8

[options.extras_require]
dev =
    pre-commit
    black==22.3.0
    flake8==4.0.1
    isort==5.12.0
    pytest
    pytest-cov
doc =
    sphinx==7.2.6
    furo==2023.9.10
    myst-parser==2.0.0
    sphinx-copybutton==0.5.2

[flake8]
ignore = F403, F401
